# mal-bombing-detector

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  REFRACTOR_NOTES.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_fetch.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  tests.yml
config/: config.example.yaml
docs/: CONTRIBUTING.md  METRICS.md  SCORING_IMPROVEMENTS.md
locales/: de.json  en.json  es.json  fr.json  ja.json  ru.json  zh.json
output/test_context/: top_5_analysis_20251216_142132.json
src/: __init__.py  __main__.py  _version.py
src/cli/: __init__.py  commands.py
src/core/: __init__.py  analyzer.py  metrics.py  models.py  statistics.py
src/exporters/: __init__.py  aggregation.py  base.py  csv_export.py  excel.py  html_export.py  json_export.py
src/utils/: __init__.py  cache.py  config.py  i18n.py  logging.py
src/visualization/: __init__.py  charts.py  themes.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_anime.json
tests/integration/: test_pipeline.py
tests/unit/: test_cli_analyze_paths.py  test_cli_compare_config.py  test_cli_config_view.py  test_cli_single_config.py  test_cli_version.py  test_config_view.py  test_export_aggregation.py  test_failures.py  test_json_exporter.py  test_metrics.py  test_models.py  test_reporting.py  test_scoring_adjustments.py  test_statistics.py
